--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.2
 rich==13.3.3
-scikit-learn==1.2.2
+scikit-learn
 scipy==1.10.1
 seaborn==0.12.2
 semver==3.0.0
